--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   content-server:
     build: 
       context: ./content-server
-      dockerfile: ../Dockerfile
+      dockerfile: ./Dockerfile
     image: content-server
     ports:
     - "8080"
@@ -12,7 +12,7 @@ services:
   sorter:
     build: 
       context: ./sorter
-      dockerfile: ../Dockerfile
+      dockerfile: ./Dockerfile
     image: sorter
     ports:
     - "8080"
